--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,16 @@
        	<artifactId>jstl</artifactId>
        	<version>1.2</version>
        </dependency>
+       <dependency>
+       	<groupId>org.springframework</groupId>
+       	<artifactId>spring-jdbc</artifactId>
+       	<version>4.0.5.RELEASE</version>
+       </dependency>
+       <dependency>
+	<groupId>javax.servlet</groupId>
+	<artifactId>jsp-api</artifactId>
+	<version>2.0</version>
+	<scope>provided</scope>
+</dependency>
   </dependencies>
 </project>
