--- a/pom.xml
+++ b/pom.xml
@@ -81,5 +81,10 @@
 	<version>2.0</version>
 	<scope>provided</scope>
 </dependency>
+       <dependency>
+ <groupId>mysql</groupId>
+ <artifactId>mysql-connector-java</artifactId>
+ <version>5.1.17</version>
+       </dependency>
   </dependencies>
 </project>
